--- a/css/style.css
+++ b/css/style.css
@@ -100,11 +100,12 @@ h2 {
     position: relative;
     width: 100%;
     height: 720px;
+    overflow: hidden;
   }
   
   #main-visual .slider {
     position: absolute;
-    width: 100%;
+    width: 1920px;
     height: 720px;
     margin: 0 auto;
     left: 50%;
